# vexillologist

./: .gitignore  .versionrc  CHANGELOG.md  Cargo.nix  Cargo.toml  LICENSE-MIT  README.md  flake.nix  rust-toolchain.toml
migrations/: 20240623155531_create_users.sql  20240623170609_create_guilds.sql  20240624092723_create_scores.sql  20241004074215_remove_username.sql  20241004075254_rename_scores_to_geogrid_scores.sql  20241005101741_create_flagle_scores.sql  20241005193637_create_foodguessr_scores.sql
src/: game.rs  leaderboards.rs  lib.rs  main.rs  persist.rs  score.rs
src/game/: flagle.rs  foodguessr.rs  geogrid.rs
src/game/flagle/: leaderboards.rs  utils.rs
src/game/foodguessr/: leaderboards.rs
src/game/geogrid/: leaderboards.rs  persist.rs  utils.rs
