[package]
name = "vexillologist"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dotenvy = "0.15.7"
secrecy = "0.8.0"
tap = "1.0.1"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dev-dependencies]
indoc = "2.0.5"
