[package]
name = "vexillologist"
version = "1.2.0"
edition = "2021"
publish = false
repository = "https://github.com/maddiemort/vexillologist"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.38"
dotenvy = "0.15.7"
indoc = "2.0.5"
tap = "1.0.1"
thiserror = "1.0.61"
tracing = "0.1.40"

[dependencies.serenity]
version = "0.12.0"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies.sqlx]
version = "0.7.4"
features = ["chrono", "postgres", "runtime-tokio"]

[dependencies.tokio]
version = "1.40.0"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["fmt", "env-filter"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

[package.metadata.dist]
dist = true
